# Backtesting-4.0

./: .docker_password.example  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  exceptions.py  logger.py  notes.md  pyproject.toml  requirements.txt  run_script.py
cli/: main.py  utils.py
config/: __init__.py  base.py  development.py  production.py  testing.py
controllers/: create_multiple_balance_point_controller.py  create_multiple_operation_point_controller.py  long_balance_create_multiple_controller.py
database/: __init__.py  handler.py
fixtures/: helpers.py
go_context/: Dockerfile  go.mod  go.sum  main.go
go_http/: Dockerfile  go.mod  main.go  process_strategies.go
rust_http/: Cargo.toml  Dockerfile
rust_http/src/: config.rs  db.rs  main.rs  routes.rs
rust_http/src/indicators/: rsi.rs
rust_http/src/signals/: crossover.rs  indicator_types.rs  indicator_values.rs  mod.rs  oscillator.rs  thresholds.rs
rust_http/src/signals/indicators/: rsi.rs
rust_http/src/strategies/: annual_operation_count.rs  annual_roi.rs  annual_roi_from_global_roi.rs  commit_strategy_groups.rs  global_roi.rs  max_draw_down.rs  mod.rs  operation_points_filter.rs  operation_points_map.rs  operation_points_table.rs  process_strategies.rs  process_strategies_from_signals.rs  process_strategies_test.rs  process_strategies_validator.rs  process_strategy.rs  query_indicators.rs  query_long_operation_points.rs  query_resampled_points.rs  query_short_operation_points.rs  strategy_profitability.rs
(+396 files in other folders)
