[package]
name = "rust_http"
version = "0.1.0"
edition = "2021"

# Tell Cargo where your binary is:
[[bin]]
name = "rust_http"
path = "src/main.rs"

[dependencies]
actix-web  = "4"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
fern       = { version = "0.7.1", features = ["colored"] }
log        = "0.4"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres"] }
anyhow = "1.0.98"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
